[project]
name = "ew-design-tool"
version = "0.1.0"
description = "Example: Web-based planning and design tool for SP projects"
authors = [
    {name = "Noel C"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
