[project]
name = "unitas-gridflow"
version = "0.1.0"
description = "Pre-CAD QA and compliance tool for UK electricity network survey-to-design handoffs"
authors = [
    { name = "Noel C" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1,<4.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [
    ".venv",
    ".venv312",
    "__pycache__",
    "uploads",
    "temp_gis",
    "_archive",
    "_quarantine",
    "_reference"
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
